# Personal-HomeKit-HAP

./: CMakeLists.txt  Configuration.h  PHKAccessory.cpp  PHKControllerRecord.cpp  PHKNetworkIP.cpp
